cabal-version:      3.0
name:               Mathyl
version:            1.0.0
synopsis:           Static Site Generator with extensive LaTeX support

homepage:

license:            MIT
license-file:       LICENSE
author:             lucalabs-de
maintainer:         gspitzer@lucalabs.de

category:           Web
extra-source-files:
    CHANGELOG.md
    README.md

executable Mathyl
    main-is:          Main.hs

    other-modules:    Util.Helpers 
                    , Util.FileHelpers
                    , Util.MathHelpers
                    , Util.Files
                    , Logging.Logger
                    , Compilers.Templates
                    , Compilers.TikzCompiler
                    , Compilers.BlogCompiler
                    , Settings.Options
                    , Compilers.Post
                    , Conversion.PdfConverter
                    , Parsers.CliParser
                    , Parsers.MustachePartialParser
                    , Paths_Mathyl

    build-depends:    base
                    , mtl
                    , aeson
                    , exceptions
                    , optparse-applicative
                    , stache
                    , text 
                    , pandoc 
                    , temporary
                    , directory
                    , containers
                    , filepath
                    , file-embed
                    , bytestring
                    , process
                    , megaparsec
                    , parser-combinators
                    , utf8-string
                    , gi-poppler
                    , gi-cairo-connector
                    , gi-cairo-render
                    , gi-cairo
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -XFlexibleContexts
